# goon_game

./: .gitattributes  .gitignore  Cargo.toml
assets/models/: level.blend  level.gltf
assets/models/boardwalk/: boardwalk.blend  boardwalk.gltf
assets/models/level/: level.blend  level.gltf
assets/models/obstacles/low/: spike.blend  spike.gltf
assets/models/player/: goblin.blend  goblin.gltf  goblin_animated.blend  goblin_animated.gltf
src/: camera.rs  clamp.rs  constants.rs  lanes.rs  level.rs  main.rs  obstacles.rs  particles.rs  player.rs
src/environment/: level.rs  mod.rs  skybox.rs
