[package]
name = "goon_game"
version = "0.1.0"
edition = "2021"
authors = ["Michael O'Connell <oconnellmj16@gmail.com>"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
rand = "0.8.5"
bevy = { version = "0.10", default-features = true}
bevy_rapier3d = { version = "0.21", features = [ "simd-stable", "debug-render-3d" ] }
bevy_editor_pls = "0.3"
bevy_hanabi = "0.6.1"

[build-dependencies]
embed-resource = "1.4"
